Back npm install fix

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -17,7 +17,7 @@ install:
   - git reset --hard HEAD
   - npm install npm -g
   - npm prune
-  - npm install --no-bin-links
+  - npm install
 
 build_script:
   - node --version
