--- a/appveyor.yml
+++ b/appveyor.yml
@@ -2,7 +2,7 @@ version: 0.1.{build}
 
 platform:
   - x64
-  
+
 cache:
   - node_modules
   - app\node_modules
@@ -20,7 +20,7 @@ deploy:
   prerelease: false
   on:
     branch: master                 # release from master branch only
-    appveyor_repo_tag: true        # deploy on tag push only
+    appveyor_repo_tag: false        # deploy on tag push only
 
 init:
   - git config --global core.autocrlf input
