--- a/appveyor.yml
+++ b/appveyor.yml
@@ -15,7 +15,7 @@ deploy:
   provider: GitHub
   auth_token:
     secure: iSVmDGLvWisOvocYJIMvDZMpCb3s6MTTBryk9KPh/ZDLO8yMSl21U/uGFNmk4dKJ
-  artifact: /.*\.nupkg/            # upload all NuGet packages to release assets
+  artifact: /.*\.exe/            # upload all NuGet packages to release assets
   draft: false
   prerelease: false
   on:
