Build for Linux

--- a/app/package.json
+++ b/app/package.json
@@ -2,7 +2,8 @@
   "name": "HandView",
   "version": "1.0.0",
   "description": "Cliente Desktop para o Hand View",
-  "author": "Piero",
+  "author": "Piero <pierophp@gmail.com> (https://github.com/pierophp/handview-desktop)",
+  "license": "CC0-1.0",
   "private": true,
   "main": "./main.js",
   "dependencies": {
