--- a/.travis.yml
+++ b/.travis.yml
@@ -32,6 +32,7 @@ addons:
     packages:
       - libgnome-keyring-dev
       - icnsutils
+      - graphicsmagick
       - clang-3.7
 
 before_install:
@@ -39,6 +40,7 @@ before_install:
   - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew install git-lfs; fi
   - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then git lfs pull; fi
   - gem install --no-rdoc --no-ri fpm
+
   - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then curl -L https://github.com/github/git-lfs/releases/download/v1.2.0/git-lfs-linux-amd64-1.2.0.tar.gz | tar -xz; fi
   - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then git-lfs-1.2.0/git-lfs pull; fi
 
