--- a/appveyor.yml
+++ b/appveyor.yml
@@ -15,7 +15,7 @@ deploy:
   provider: GitHub
   auth_token:
     secure: iSVmDGLvWisOvocYJIMvDZMpCb3s6MTTBryk9KPh/ZDLO8yMSl21U/uGFNmk4dKJ
-  artifact: /.*\.exe/            # upload all NuGet packages to release assets
+  artifact: /.*\.msi/            # upload all NuGet packages to release assets
   draft: false
   prerelease: false
   on:
@@ -36,5 +36,6 @@ build_script:
   - node --version
   - npm --version
   - npm run dist
+  - dir
 
 test: off
