--- a/package.json
+++ b/package.json
@@ -39,6 +39,12 @@
           "type": "file"
         }
       ]
+    },
+    "win": {
+      "iconUrl":"",
+      "setupIcon":"",
+      "loadingGif": "",
+      "noMsi": "false"
     }
   }
 }
