--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,4 +1,4 @@
-version: 1.0.0
+version: 1.0.{build}
 
 platform:
   - x64
@@ -10,7 +10,7 @@ cache:
   - '%USERPROFILE%\.electron'
 
 deploy:
-  release: v$(appveyor_build_version)
+  release: v1.0.0
   description: 'Release description'
   provider: GitHub
   auth_token:
