--- a/appveyor.yml
+++ b/appveyor.yml
@@ -19,7 +19,7 @@ deploy:
   draft: false
   prerelease: false
   on:
-    branch: master                 # release from master branch only
+    branch: v1.0.0
     appveyor_repo_tag: true        # deploy on tag push only
 
 init:
