--- a/appveyor.yml
+++ b/appveyor.yml
@@ -9,13 +9,17 @@ cache:
   - '%APPDATA%\npm-cache'
   - '%USERPROFILE%\.electron'
 
+artifacts:
+  - path: dist\win-x64\*.msi
+    name: HandViewDesktop
+
 deploy:
   release: v1.0.0
   description: 'Release description'
   provider: GitHub
   auth_token:
     secure: iSVmDGLvWisOvocYJIMvDZMpCb3s6MTTBryk9KPh/ZDLO8yMSl21U/uGFNmk4dKJ
-  artifact: /.*\.msi/
+  artifact: HandViewDesktop
   draft: false
   prerelease: false
   on:
@@ -36,6 +40,6 @@ build_script:
   - node --version
   - npm --version
   - npm run dist
-  - move dist\win-x64\Setup.msi HandView-$(appveyor_build_version).msi
+  - move dist\win-x64\Setup.msi dist\win-x64\HandView-$(appveyor_build_version).msi
 
 test: off
