--- a/appveyor.yml
+++ b/appveyor.yml
@@ -32,7 +32,7 @@ init:
 install:
   - ps: Install-Product node 5 x64
   - git reset --hard HEAD
-  - npm install npm -g
+  - npm install npm -g --silent
   - npm prune
   - npm install
 
@@ -40,6 +40,6 @@ build_script:
   - node --version
   - npm --version
   - npm run dist
-  - move dist\win-x64\Setup.msi dist\win-x64\HandView-$(appveyor_build_version).msi
+  - move dist\win-x64\Setup.msi dist\win-x64\HandView-1.0.0-x64.msi
 
 test: off
