--- a/.travis.yml
+++ b/.travis.yml
@@ -47,6 +47,7 @@ install:
 script:
 - npm run dist
 before_deploy:
+  - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then ls dist; fi
   - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then export RELEASE_PKG_FILE=$(ls dist/HandView-darwin-x64/*.dmg); fi
   - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then export RELEASE_PKG_FILE=$(ls dist/*.deb); fi
   - echo "deploying $RELEASE_PKG_FILE to GitHub releases"
